# piss

./: .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
config/: landtage_registry.yaml  link_overrides.yaml  seeds.yaml
scripts/: smoketest.sh
src/scraper/: cli.py  config.py  logging.py
src/scraper/cache/: evidence_index.py  mediawiki_cache.py
src/scraper/evidence/: formatters.py  resolver.py  snippets.py  types.py
src/scraper/evidence/backends/: file_cache.py
src/scraper/mediawiki/: client.py  types.py
src/scraper/models/: domain.py
src/scraper/parsers/: legislature_members.py  person_page.py
src/scraper/pipeline/: run.py
src/scraper/reconcile/: wiki_dip.py
src/scraper/seeds/: __init__.py  discover_landtage.py  registry.py
src/scraper/sinks/: json_export.py  meili.py  neo4j.py
src/scraper/sources/dip/: client.py  ingest.py  types.py
src/scraper/utils/: hashing.py  ids.py  time.py  url.py
tests/: test_cache_paths_and_manifest.py  test_dip_pagination_and_cache.py  test_evidence_cli_output_formats.py  test_evidence_cli_prefer_table_row.py  test_evidence_resolve_mediawiki.py  test_evidence_resolve_snippet_cleaning.py  test_evidence_resolve_table_row.py  test_legislature_members_produces_evidence_refs.py  test_legislature_members_snippet_ref.py  test_link_overrides_apply.py  test_no_snippet_ref_on_evidence.py  test_parse_legislature_members_nds_17.py  test_parse_legislature_members_nds_18.py  test_parse_person_infobox.py  test_reconcile_ruleset_v1_ambiguous_pending.py  test_reconcile_ruleset_v1_unique_match.py  test_resolve_from_meili_uses_correct_table_row.py  test_resolver_fallback_legacy_evidence_ids.py  test_seed_discover_landtage_offline.py  test_seed_validation.py
tests/fixtures/dip/person_list_wp19_page1/: metadata.json  (+1 more)
(+4 files in other folders)
